--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Darr3n's Website
-subtitle: This is where I will tell people about me
+title: Darr3n
+subtitle: Technology Must Serve
 ---
